small fixes for text overflow and link support

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -111,6 +111,7 @@ body {
 
 .details {
   white-space: pre-wrap;
+  white-space: break-word;
 }
 
 .w-600 {
